--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -146,5 +146,8 @@
         shareSuccess: `{{ 'general.share.success_message' | t }}`,
       }
     </script>
-  </body>
+  <!-- Begin ReCharge code -->
+{% include 'subscription-theme-footer' %}
+<!-- End ReCharge code -->
+</body>
 </html>
