--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -131,6 +131,12 @@
       </a>
       
     {%- endform -%}
+<!-- Begin ReCharge code -->
+{% render 'subscription-account-login' %}
+<!-- End ReCharge code -->
+
+
+
   </div>
   
   {%- if shop.checkout.guest_login -%}
