--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -5,18 +5,39 @@
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 
 <div class="page-width page-width--narrow">
-  <h1 class="main-page-title page-title h0">
-    {{ page.title | escape }}
-  </h1>
-  <div class="rte">
-    {{ page.content }}
-  </div>
+  {% if section.settings.show_title == true %}
+    <h1 class="main-page-title page-title h0">
+      {{ page.title | escape }}
+    </h1>
+  {% endif %}
+
+  {% if section.settings.show_content== true %}
+    <div class="rte">
+      {{ page.content }}
+    </div>
+  {% endif %}
 </div>
 
 {% schema %}
 {
   "name": "t:sections.main-page.name",
   "tag": "section",
-  "class": "spaced-section"
+  "class": "spaced-section",
+  "settings": [
+    {
+      "type": "checkbox",
+      "id": "show_title",
+      "default": true,
+      "label": "Show Title",
+      "info": "Shows the title of the page"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_content",
+      "default": true,
+      "label": "Show Content",
+      "info": "Shows the content of the page"
+    }
+  ]
 }
 {% endschema %}
