Include deprecated, use render

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -167,7 +167,7 @@
     {%- endif -%}
     
     <!-- Begin ReCharge code -->
-    {% include 'subscription-theme-footer' %}
+    {% render 'subscription-theme-footer' %}
     <!-- End ReCharge code -->
   </body>
 </html>
