--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -320,7 +320,9 @@
                         </div>
                     </button>
                     {%- if block.settings.show_dynamic_checkout -%}
-                      {{ form | payment_button }}
+                      {% unless shop.metafields.subscriptions.subscription_active and product.metafields.subscriptions.shipping_interval_frequency %}
+{{ form | payment_button }}
+{% endunless %}
                     {%- endif -%}
                   </div>
                 {%- endform -%}
@@ -428,6 +430,7 @@
 
     hide() {
       super.hide();
+      window.pauseAllMedia();
     }
 
     show(opener) {
