--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -10,10 +10,18 @@
       </symbol>
     </svg>
     <h1>{{ 'customer.addresses.title' | t }}</h1>
-    <a href="{{ routes.account_url }}">
-      {{ 'customer.account.return' | t }}
-    </a>
-
+    <h2>The following address changes only apply to one-time purchase orders.</h2>
+    <div>
+      <span>To Manage Subscriptions:</span>
+      <a href="/tools/recurring/login">Manage Subscriptions</a>
+    </div>
+    <div>
+      <span>To Go Back to your Account:</span>
+      <a href="{{ routes.account_url }}">
+        {{ 'customer.account.return' | t }}
+      </a>
+    </div>
+    
     <div data-address>
       <button
         type="button"
