--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -109,9 +109,9 @@
 
       {{ customer.default_address | format_address }}
 
-      <a href="{{ routes.account_addresses_url }}">
+      {% comment %} <a href="{{ routes.account_addresses_url }}">
         {{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})
-      </a>
+      </a> {% endcomment %}
 
       <!-- Begin ReCharge code -->
       <p id="rc_link_container">
