Carton label change

--- a/snippets/portion-calculator.liquid
+++ b/snippets/portion-calculator.liquid
@@ -74,7 +74,7 @@
     </div>
     <button type="submit" class='button button--primary'>Calculate</button>
     <p id="recommendation-banner" class="hidden">
-      We recommend feeding your dog <span id="daily-unit-recommendation"></span> units of Happy Howl food per day (not per meal).
+      We recommend feeding your dog <span id="daily-unit-recommendation"></span> cartons of Happy Howl food per day (not per meal).
     </p>
   </form>
 </portion-calculator-form>
