--- a/assets/component-portion-calculator.css
+++ b/assets/component-portion-calculator.css
@@ -9,3 +9,13 @@
 .hidden {
   display: none;
 }
+
+#recommendations {
+  margin-top: 2em;
+  border-top: 1px solid #00000033;
+}
+
+#recommendation-table {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
