--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -181,5 +181,7 @@
     <!-- Begin ReCharge code -->
     {% render 'subscription-theme-footer' %}
     <!-- End ReCharge code -->
-  </body>
+   {% include 'smile-initializer' %}
+
+</body>
 </html>
