--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -748,6 +748,10 @@ a.product__text {
   display: inline-block;
 }
 
+.product-popup-modal__opener--full-width {
+  width: 100%;
+}
+
 .product-popup-modal__button {
   font-size: 1.6rem;
   padding-right: 1.3rem;
