--- a/snippets/subscription-cart-footer.liquid
+++ b/snippets/subscription-cart-footer.liquid
@@ -101,7 +101,7 @@
 			var checkout_url = 'https://' + options.checkout_domain + '/r/checkout?',
 				url_params = [
 					'myshopify_domain=' + options.permanent_domain,
-					'discount=TRYHOWL50'
+					'discount=SUBHOWL50'
 				];
 			url_params = url_params
 				.concat(get_cart_token())
