--- a/snippets/subscription-product.liquid
+++ b/snippets/subscription-product.liquid
@@ -190,7 +190,7 @@
 						{% if discount_percentage > 0 %}
 							{% comment %} TODO: Rollback hack when discount changes / no longer needed {% endcomment %}
 							<s id="rc_price_onetime" class="rc_price rc_price__onetime" aria-label="original price"></s>
-							<span class="rc_price rc_price__onetime" aria-label="discount">50% off</span>
+							<span class="rc_price rc_price__onetime" aria-label="discount">30% OFF</span>
 						{% endif %}
 					</label>
 				</div>
@@ -204,7 +204,7 @@
 							<span class="rc_label__discount" aria-label="subscription discount">({{ discount_percentage }}%):</span>
 							{% comment %} TODO: Rollback hack when discount changes / no longer needed {% endcomment %}
 							<s id="rc_price_autodeliver" class="rc_price rc_price__autodeliver" aria-label="recurring price"></s>
-							<span class="rc_price rc_price__autodeliver" aria-label="discount">50% off</span>
+							<span class="rc_price rc_price__autodeliver" aria-label="discount">50% OFF</span>
 						{% endif %}
 					</label>
 				{% endunless %}
