Portion Calculator: Change table to lists

--- a/snippets/portion-calculator.liquid
+++ b/snippets/portion-calculator.liquid
@@ -77,42 +77,26 @@
       <h3>
         Recommendations
       </h3>
-      <p id="recommendation-banner">
-        We recommend feeding your dog <strong><span id="daily-unit-recommendation"></span> cartons</strong> or <strong><span id="daily-cup-recommendation"></span> cups</strong> of Happy Howl food per day (not per meal).
-      </p>
-      <table id="recommendation-table">
-        <thead>
-          <th>
-            Cartons
-          </th>
-          <th>
-            Quantity
-          </th>
-          <th>
-            Recommended Days
-          </th>
-        </thead>
-        <tbody>
-          <tr>
-            <td id="carton-6-variant">
-              6
-            </td>
-            <td id="carton-6-quantity">
-            </td>
-            <td id="carton-6-recommended-days">
-            </td>
-          </tr>
-          <tr>
-            <td d="carton-18-variant">
-              18
-            </td>
-            <td id="carton-18-quantity">
-            </td>
-            <td id="carton-18-recommended-days">
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <ol>
+        <li>
+          <p id="recommendation-banner">
+            We recommend feeding your dog <strong><span id="daily-unit-recommendation"></span> cartons</strong> or <strong><span id="daily-cup-recommendation"></span> cups</strong> of Happy Howl food per day (not per meal).
+          </p>
+        </li>
+        <li>
+          <p id="recommendation-options">
+            When starting a subscription (Subscribe & Save), we recommend choosing the following plan(s):
+            <ul>
+              <li id="carton-6-option">
+                6 cartons, with a quantity of <span id="carton-6-quantity"></span> delivered every <span id="carton-6-recommended-days"></span> days
+              </li>
+              <li id="carton-18-option">
+                18 cartons, with a quantity of <span id="carton-18-quantity"></span> delivered every <span id="carton-18-recommended-days"></span> days
+              </li>
+            </ul> 
+          </p>
+        </li>
+      </ol> 
     </div>
   </form>
 </portion-calculator-form>
