--- a/snippets/subscription-product.liquid
+++ b/snippets/subscription-product.liquid
@@ -189,7 +189,7 @@
 						{{ label_onetime }}{% if discount_percentage > 0 %}:{% endif %}
 						{% if discount_percentage > 0 %}
 							{% comment %} TODO: Rollback hack when discount changes / no longer needed {% endcomment %}
-							<s id="rc_price_onetime" class="rc_price rc_price__onetime" aria-label="original price"></s>
+							<span id="rc_price_onetime" class="rc_price rc_price__onetime" aria-label="original price"></span>
 							<span class="rc_price rc_price__onetime" aria-label="discount">30% OFF</span>
 						{% endif %}
 					</label>
@@ -203,7 +203,7 @@
 						{% if discount_percentage > 0 %}
 							<span class="rc_label__discount" aria-label="subscription discount">({{ discount_percentage }}%):</span>
 							{% comment %} TODO: Rollback hack when discount changes / no longer needed {% endcomment %}
-							<s id="rc_price_autodeliver" class="rc_price rc_price__autodeliver" aria-label="recurring price"></s>
+							<span id="rc_price_autodeliver" class="rc_price rc_price__autodeliver" aria-label="recurring price"></span>
 							<span class="rc_price rc_price__autodeliver" aria-label="discount">50% OFF</span>
 						{% endif %}
 					</label>
