--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -119,7 +119,13 @@
 
       {% comment %} <a href="{{ routes.account_addresses_url }}">
         {{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})
-      </a> {% endcomment %}
+      </a>
+<!-- Begin ReCharge code -->
+<p id="rc_link_container">
+    <a href="/tools/recurring/login">Manage Subscriptions</a>
+</p>
+<!-- End ReCharge code -->
+ {% endcomment %}
 
       
 
